# sgl

./: .dockerignore  .gitignore  591.py  Makefile  Pipfile  README.md  app.py  example-settings.ini  logger.py  pyproject.toml  requirements.txt
5g1/: constants.py  main.py
5g1/settings/: default.py
docs/591/: code-list.json  house.json  kind-list.txt  region-list.txt
scripts/: get_images_urls.py
scripts/591/: constants.py  get_lat_and_lng.py  main.py
sgl/: __init__.py  constants.py  converters.py  crawler.py  endpoints.py  forms.py  logger.py  main.py  utils.py
sgl/plugins/: google_maps.py
sgl/settings/: default.py
sgl/sites/: __init__.py  sgl.py
sgl/templates/: base.html  index.html  map.html
spikes/591/: constants.py
