[tool.poetry]
name = "sgl"
version = "2.1.0"
description = "A simple crawler for https://rent.591.com.tw/"
authors = ["Frank Jheng <M157q.tw@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
beautifulsoup4 = "4.9.2"
Flask-GoogleMaps = "0.4.0"
Flask-WTF = "0.14.3"
requests = "2.24.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
